Added Logging, Removed Optional return types, Created Custom Exceptions